<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/searchOptions"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:padding="10dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/heading"
        android:padding="10dp"
        android:text="@string/imgsize"
        android:layout_alignTop="@+id/sizes"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
     <TextView
         android:id="@+id/site"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/type"
         android:layout_marginTop="25dp"
         android:padding="10dp"
         android:text="@string/sitefilter"
         android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/sizes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heading"
        android:layout_toRightOf="@+id/size" />

    <Spinner
        android:id="@+id/colors"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sizes"
        android:layout_below="@+id/sizes"
        android:layout_toRightOf="@+id/color" />
     <Spinner
        android:id="@+id/types"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/colors"
        android:layout_below="@+id/colors"
        android:layout_toRightOf="@+id/type" />

     <EditText
         android:id="@+id/sitefilter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/site"
         android:layout_alignLeft="@+id/types"
         android:layout_alignTop="@+id/site"
         android:layout_toRightOf="@+id/site"
         android:ems="10"
         android:hint="@string/urlfilter" />

     <Button
         android:id="@+id/saveSettingsBt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/sitefilter"
         android:layout_centerHorizontal="true"
         android:onClick="saveSettings"
         android:layout_marginTop="24dp"
         android:text="@string/savesettings" />

     <TextView
         android:id="@+id/color"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignTop="@+id/colors"
         android:padding="10dp"
         android:text="@string/imgColor"
         android:textAppearance="?android:attr/textAppearanceMedium" />

     <TextView
         android:id="@+id/type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignTop="@+id/types"
         android:padding="10dp"
         android:text="@string/imgtype"
         android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
